--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,4 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+{{application-header}}
+<div class="container-fluid">
+    {{outlet}}
+</div>
