--- a/app/templates/components/application-header.hbs
+++ b/app/templates/components/application-header.hbs
@@ -2,17 +2,17 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#appHeader" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">{{t "app.toggleNavigation"}}</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            {{#link-to "index" class="navbar-brand"}}Lazy Resources{{/link-to}}
+            {{#link-to "index" class="navbar-brand"}}{{t "app.title"}}{{/link-to}}
         </div>
 
         <div class="collapse navbar-collapse" id="appHeader">
             <ul class="nav navbar-nav navbar-right">
-                <li>{{#link-to "index"}}Home{{/link-to}}</li>
+                <li>{{#link-to "index"}}{{t "app.home"}}{{/link-to}}</li>
             </ul>
         </div>
     </div>
